mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_unclosed_char.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_unclosed_char.mux`
error: Unterminated character literal
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_unclosed_char.mux:2:10
   |
 2 | auto c = '
   |          ^
   |
= help: Make sure to close the character with a matching quote
